Bump to 8.1.4-snapshot / clear some warnings.